--- a/src/components/Header/headerStyle.css
+++ b/src/components/Header/headerStyle.css
@@ -72,7 +72,8 @@ h1, h2, h3 {
   .header-nav.open {
     opacity: 1;
     pointer-events: all;
-    transform: translateY(0);
+    transform: translateY(50px);
+    z-index: 9999;
   }
 
   .cta-btn {
