feat: Criando sessão de depoimentos

--- a/src/components/Depoimentos/depoimentosStyle.css
+++ b/src/components/Depoimentos/depoimentosStyle.css
@@ -1,6 +1,6 @@
 .depoimentos-section {
-  background-color: var(--gray-bg);
-  padding: 6rem 1.5rem;
+  background-color: var(--white);
+  padding: 2rem;
 }
 
 .depoimentos-header {
